Give gap to .feature-4 to avoid clipping the text with the image

--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ img {
   }
   .feature-4 {
     flex-direction: row-reverse;
+    gap: var(--gap-1);
   }
 }
 
